CustomSelect: Fix height shifting

--- a/src/common/stylesheets/components/_custom-select.scss
+++ b/src/common/stylesheets/components/_custom-select.scss
@@ -7,8 +7,7 @@
 		align-items: center;
 		gap: 4px;
 		width: 100%;
-		height: 100%;
-		min-height: 22px;
+		height: 24px;
 		padding: 3px 6px;
 		padding-inline-end: 20px;
 		border-radius: 5px;
